--- a/database-jic/Dockerfile
+++ b/database-jic/Dockerfile
@@ -1,5 +1,5 @@
 FROM postgres
-ENV POSTGRES_PASSWORD electiva2
+ENV POSTGRES_PASSWORD jipia
 ENV POSTGRES_DB products
 ENV POSTGRES_USER root
 COPY init.sql /docker-entrypoint-initdb.d/
